# local-changes-viewer

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  implementation-plan.md  spec.md
packaging/: app_entry.py  local-changes-viewer.spec
scripts/: debug_scan.py
src/local_changes_viewer/: main.py
src/local_changes_viewer/core/domain/: diff.py  file_change.py  folder_filter_rule.py  repository.py  workspace.py
src/local_changes_viewer/core/infra/: filesystem_scanner.py  git_repo_adapter.py
src/local_changes_viewer/core/services/: context_folding.py  diff_formatting.py  diff_pairing.py  diff_service.py  file_info.py  intraline_diff.py  workspace_filter.py  workspace_scanner_service.py
src/local_changes_viewer/gui/: applog.py  folder_filter_dialog.py  main_window.py  settings.py
src/local_changes_viewer/gui/diff_view/: diff_view_widget.py  side_by_side_view.py  syntax_highlighter.py  unified_view.py
src/local_changes_viewer/gui/workers/: diff_worker.py  scan_worker.py
src/local_changes_viewer/gui/workspace_tree/: aggregate_list.py  tree_model.py  tree_view.py
tests/core/domain/: test_domain_models.py
tests/core/infra/: test_filesystem_scanner.py  test_git_repo_adapter.py
tests/core/services/: test_context_folding.py  test_diff_formatting.py  test_diff_pairing.py  test_file_info.py  test_intraline_diff.py  test_workspace_filter.py  test_workspace_scanner_service.py
