[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "local-changes-viewer"
version = "0.1.0"
description = "Desktop GUI to view git changes across multiple repositories under a folder"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10",
    "GitPython>=3.1",
    "Pygments>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyinstaller>=6.10",
]

[project.scripts]
local-changes-viewer = "local_changes_viewer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
